Fix overflowing lines caused by default css.

--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,8 @@ body {
 	font-size:5em;
 	color:#fff;
 }
+
+.ui-listview li{
+    white-space: normal !important;
+ 
+}
